Fixed URLClassLoader for windowz